--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -7,6 +7,23 @@ html {
 
 *, *:before, *:after {
   box-sizing: inherit;
+  /* border: 1px black solid; */
+}
+
+ul {
+  margin-left: 0;
+  padding-left: 0;
+}
+
+li {
+  margin-top: 5px;
+  margin-left: 20px;
+  font-size: 1.2em;
+}
+
+hr {
+  width: 60%;
+  border: 1px #d1d1d1 solid;
 }
 
 body, h1, h2, h3, h4, h5, h6, p, ol, ul {
@@ -22,3 +39,71 @@ body {
 
 /* STYLES */
 /* Write your CSS below */
+
+header {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("/images/apple-pie.jpg");
+  height: 80vh;
+}
+
+
+h1 {
+  position: absolute;
+  color: white;
+  font-size: 5em;
+  font-weight: 400;
+}
+
+section {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+section.description {
+  margin-top: 100px;
+  margin-bottom: 50px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+article {
+  font-size: 1.5em;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+img.recipeInfo {
+  width: 500px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+section.ingredient {
+  padding: 20px 0;
+  justify-content: space-evenly;
+}
+
+h2 {
+  font-size: 2em;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+ul > li {
+  list-style-type: "- ";
+}
+
+img.cookingInfo {
+  width: 400px;
+  margin: 50px auto;
+}
+
+
+section.direction {
+  padding: 20px 0 100px 0;
+}
